<resources>
    <string name="app_name">ParstagramAndroid</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Write a caption...</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">Share</string>
    <string name="Password">password</string>
    <string name="Username">username</string>
    <string name="no_acct">Don\'t have an account?</string>
    <string name="Bio">bio...</string>
    <string name="edit_profile_information">Edit Profile Information</string>
</resources>